# License_Plate_Number_Detect

./: CMakeLists.txt  README.md  cat.ipynb  detector.py  hsv.ipynb  package.xml
.github/workflows/: ros_ci.yml
char_detector/: CMakeLists.txt  package.xml
char_detector/include/char_detector/: char_detector.hpp  character_matcher.hpp
char_detector/src/: char_detector.cpp  character_matcher.cpp
config/: license_detetor.yaml
image_publisher/: CMakeLists.txt  package.xml
image_publisher/include/image_publisher/: image_publisher.hpp
image_publisher/src/: image_publisher.cpp
include/license_detetor/: license_detetor.hpp
launch/: license_detetor.launch.py
license_detector_bringup/: CMakeLists.txt  package.xml
license_detector_bringup/config/: image_publisher.yaml
license_detector_bringup/launch/: license_detector_bringup.launch.py
license_detector_interfaces/: CMakeLists.txt  package.xml
license_detector_interfaces/msg/: LicenseChar.msg
license_detetor_bringup/: CMakeLists.txt  package.xml
license_detetor_bringup/config/: image_publisher.yaml
license_detetor_bringup/launch/: license_detetor_bringup.launch.py
license_extract/: CMakeLists.txt  package.xml
license_extract/include/license_extract/: extractor.hpp  license_extract.hpp
license_extract/src/: extractor.cpp  license_extract.cpp
src/: license_detetor.cpp
static/: cat.py  hsv_cnt.py
wiki/: README.md
